Dashboard exibindo card com os dados

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,10 @@ code {
 body{
   background-color: var(--color-white);
 }
+
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
