correcao de bugs

--- a/src/components/templates/Header/style.css
+++ b/src/components/templates/Header/style.css
@@ -1,6 +1,8 @@
 .navbar{
   background-color: var(--color-black);
   box-shadow: 0 2px 7px 0 rgba(0,0,0,.5);
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .perfil button{
@@ -27,4 +29,3 @@
   display: flex;
   flex-direction: column;
 }
-
