--- a/src/components/templates/Sidebar/style.css
+++ b/src/components/templates/Sidebar/style.css
@@ -52,4 +52,9 @@
 
 .ant-menu-dark .ant-menu-item-selected > a, .ant-menu-dark .ant-menu-item-selected > span > a, .ant-menu-dark .ant-menu-item-selected > a:hover, .ant-menu-dark .ant-menu-item-selected > span > a:hover {
   color: var(--color-blue);
+  text-decoration: none;
+}
+
+.ant-menu-dark .ant-menu-item, .ant-menu-dark .ant-menu-item-group-title, .ant-menu-dark .ant-menu-item > a, .ant-menu-dark .ant-menu-item > span > a {
+  text-decoration: none;
 }
